Added 'comercializacao' endpoint controller code, minor corrections
