# swagger_server/swagger/swagger.yaml
@@ -101,18 +101,10 @@ paths:
         available comercializacao info in the system
       operationId: search_comercializacao
       parameters:
-      - name: Comercializacao_category_search_String
-        in: query
-        description: pass a category name search string for looking up comercializacao
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: string
       - name: Comercializacao_product_search_String
         in: query
         description: pass a product name search string for looking up comercializacao
-        required: false
+        required: true
         style: form
         explode: true
         schema:
